--- a/wrangler.toml
+++ b/wrangler.toml
@@ -17,12 +17,12 @@ TARGET_UPSTREAM = "https://registry-1.docker.io"
 name = "cloudflare-docker-proxy"
 routes = [
     { pattern = "docker.lisrv.com", custom_domain = true },
-    { pattern = "quay.libcuda.so", custom_domain = true },
-    { pattern = "gcr.libcuda.so", custom_domain = true },
-    { pattern = "k8s-gcr.libcuda.so", custom_domain = true },
-    { pattern = "k8s.libcuda.so", custom_domain = true },
-    { pattern = "ghcr.libcuda.so", custom_domain = true },
-    { pattern = "cloudsmith.libcuda.so", custom_domain = true },
+    { pattern = "quay.lisrv.com", custom_domain = true },
+    { pattern = "gcr.lisrv.com", custom_domain = true },
+    { pattern = "k8s-gcr.lisrv.com", custom_domain = true },
+    { pattern = "k8s.lisrv.com", custom_domain = true },
+    { pattern = "ghcr.lisrv.com", custom_domain = true },
+    { pattern = "cloudsmith.lisrv.com", custom_domain = true },
 ]
 
 [env.production.vars]
